# Story-Royale-Engine

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  IDEAS.txt  LICENSE.txt  README.md  SDLApp2.sln  TODO.txt  VERSION.txt
imgui_glue/: CMakeLists.txt  imgui_glue.cpp  imgui_srcs.cpp
src/: CMakeLists.txt  Color.c  DefaultGameSettings.cpp  ExtraSDL.c  File.cpp  InitEngine.c  Music.cpp  Sound.cpp  System.c  System.cpp  args.h  dllmain.c  heap.cpp  internal.h  internal.hpp  logging.c  main.c  main.cpp
src/Base/: Audio.cpp  Font.cpp  FontRenderer.cpp  Physics.cpp  Rendering.cpp  Runtime.cpp  Signal.cpp  TargetTexture.cpp  Texture.cpp  Thread.cpp  Tween.cpp  Window.cpp
src/Base/File/: Chunk.cpp  Class.cpp  Loading.cpp  Stream.cpp
src/Classes/: Action.cpp  Font.cpp  FontRenderer.cpp  Signal.cpp  Signal2.cpp  TargetTexture.cpp  Texture.cpp  Thread.cpp  Timer.cpp  Tween.cpp
src/Classes/File/: Class.cpp  Loading.cpp
src/Core/: Audio.cpp  AudioFormat.c  AudioFormat.cpp  AudioInternal.cpp  Containers.cpp  DestroyQueue.cpp  InitEngine.c  Input.cpp  InputEvents.cpp  InstanceRendering.cpp  Physics.cpp  Querying.cpp  Renderer.cpp  Rendering.cpp  Runtime.c  Runtime.cpp  ThreadPool.cpp  Timer.cpp  Tween.cpp  Window.cpp  WindowCreation.c  WindowData.cpp
src/Datatypes/: Color.c  Color.cpp  Signal.cpp  UDim.cpp
src/Extras/: ExtraSDL.c  ExtraString.c
src/GameLayer/: CameraController.cpp  Component.cpp  Entity.cpp  GuiLayer.cpp  World.cpp
src/GameLayer/Components/Gui/: AspectRatio.cpp  Image.cpp  List.cpp  Modulate.cpp  Padding.cpp  Rendering.cpp  Text.cpp  UIList.cpp  UIModulate.cpp  UIPadding.cpp  UIText.cpp
src/GameLayer/Components/World/: CustomTexture.cpp  Shape.cpp  Sprite.cpp  StaticTexture.cpp  Velocity.cpp
src/GameLayer/Presets/Camera/: DragControl.cpp  EntityControl.cpp
src/GameLayer/Presets/Gui/: GuiButton.cpp
src/NewCore/: Audio.cpp  AudioInternal.cpp  DestroyQueue.cpp  InputEvents.cpp  Renderer.cpp  Runtime.cpp  WindowCreation.c
src/OldCore/: Runtime.cpp
src/Sys/: error.c  log.c  sleep.c
src/SystemDependent/: Windows.cpp
src/android/: android_logging.c  android_main.c
src/base/: Action.cpp  Audio.cpp  CMakeLists.txt  Font.cpp  FontRenderer.cpp  Image.cpp  Input.cpp  Physics.cpp  Rendering.cpp  Runtime.cpp  Signal.cpp  Texture.cpp  Thread.cpp  Timer.cpp  Tween.cpp  Window.cpp  action.cc  action.cpp  audio.cpp  audiochunk.c  chunk.c  chunk.cc  coroutine.c  display.cpp  draw.cc  draw.cpp  drawgrid.cpp  error.c  file.c  fileold.c  filesystem.c  font.cpp  fontatlas.cpp  fontrenderer.cpp  image.cpp  ini.cpp  log.cc  mutex.cpp  resource.c  runtime.cpp  (+7 more)
src/base/File/: Stream.cpp
src/base/_File/: Chunk.cpp  Stream.cpp
src/base/coroutine/: arm.c  arm32.s  arm64.s  armcommon.c  dummy.c  stack.c  ucontext.c  win32.c  x86_32.c  x86_32.s  x86_64.c  x86_64.s  x86_common.c
src/base/file/: androidasset.c  resource.c  stdio.c  win32.c
src/cmd/: args.c  args.h
src/core/: Audio.cpp  CMakeLists.txt  Containers.cpp  DestroyQueue.cpp  HeapTracker.cpp  InitEngine.c  Input.cpp  Querying.cpp  Renderer.cpp  Runtime.c  Window.c  audio.c  defer.c  display.cpp  draw.c  draw.cc  events.cpp  hints.c  init.c  input.cpp  objects.cpp  querying.cpp  renderer.cpp  runtime.c  runtime.cpp  texture.c  thread.c  window.c  window.cpp
src/core/drivers/: CMakeLists.txt  drivers.h
src/core/drivers/direct3d11/: .gitignore  CMakeLists.txt  d3d11.h  d3d11.hpp  d3d11draw.cpp  d3d11imgui.cpp  d3d11main.cpp  d3d11shaders.cpp  d3d11shaders.hlsl  d3d11state.cpp  d3d11texture.cpp  ps.h  vs.h
src/core/drivers/direct3d12 (joke)/: CMakeLists.txt  d3d12.cpp  d3d12imgui.cpp
src/core/drivers/direct3d9/: CMakeLists.txt  d3d9.hpp  d3d9imgui.cpp  d3d9main.cpp  d3d9shaders.cpp  d3d9shaders.hlsl  ps.h  vs1.h  vs2.h
src/core/drivers/dxcommon/: dxcommon.h
src/core/drivers/gl11/: CMakeLists.txt  gl11.h  gl11common.c  gl11drawstate.c  gl11imgui.cpp  gl11main.c
src/core/drivers/gl21/: CMakeLists.txt  gl21.h  gl21buffers.c  gl21draw.c  gl21imgui.cpp  gl21main.c  gl21state.c  gl21texture.c
src/core/drivers/gl32/: CMakeLists.txt  gl32.h  gl32buffers.c  gl32draw.c  gl32imgui.cpp  gl32main.c  gl32state.c  gl32texture.c
src/core/drivers/glcommon/: CMakeLists.txt  glcommon.c  glcommon.h  glcommonw.c  glfuncs.h
src/core/drivers/opengl/: CMakeLists.txt  draw.c  functions.h  imgui.cpp  imgui_impl3.cpp  init.c  loader.c  opengl.h  setup.c  textures.c
src/core/drivers/sdl_renderer/: CMakeLists.txt  drawing.c  imgui.cpp  init.c  sdl_renderer.h  sdlrenderer.h  sdlrenderer_draw.c  sdlrenderer_imgui.cpp  sdlrenderer_main.c  sdlrenderer_state.c  sdlrenderer_texture.c  textures.c
src/core/drivers/software/: CMakeLists.txt  swmain.c  swrender.h
src/core/time/: unix.c  win32.c
src/datatypes/: Color.cpp  UDim.cpp  definitions.cpp
src/ecs/: CMakeLists.txt  camera.cpp  entity.cpp  layer.cpp  scene.cpp
src/gamelayer/: Entity.cpp
src/gamelayer/components/gui/: AspectRatio.cpp  Padding.cpp  Text.cpp
src/gamelayer/components/world/: Sprite.cpp
src/gamelayer/presets/camera/: DragControl.cpp  EntityControl.cpp
src/gamelayer/presets/gui/: GuiButton.cpp
src/gui/: CMakeLists.txt  GuiLayer.cpp  layer.cpp  object.cpp
src/main/: CMakeLists.txt  args.c  args.h  heap.cpp  main.c  operators.cc
src/os/: CMakeLists.txt
src/os/unix/: CMakeLists.txt  os.c  os_unix.h  output.c  sync.c  wherexy.c
src/os/win/: CMakeLists.txt  os.c  os_win.h  output.c  resources.c  sync.c
src/presets/: CMakeLists.txt
src/presets/ecs/: CMakeLists.txt
src/presets/ecs/camera/: DragControl.cpp  EntityControl.cpp  dragcontrol.cpp  entitycontrol.cpp
src/presets/ecs/components/: Shape.cpp  Sprite.cpp  Velocity.cpp  shape.cpp  sprite.cpp  velocity.cpp
src/presets/gui/: CMakeLists.txt
src/presets/gui/components/: AspectRatio.cpp  Image.cpp  List.cpp  Modulate.cpp  Padding.cpp  Rendering.cpp  Text.cpp  (+9 more)
src/utils/: audioformat.c  logging.c  operators.cc
src/world/: CameraController.cpp  Entity.cpp  World.cpp
tests/CircleTest/: CMakeLists.txt  GameSettings.cpp  GuiTest.cpp  TestCharacter.cpp
(+508 files in other folders)
