cmake_minimum_required(VERSION 3.20)

option(SRE_MINIMAL "Build binaries only, without building the rest (Resource folderd, icons, etc...)" OFF)
option(SRE_IMGUI "Integrate ImGui. A GUI library that's useful for debugging, along with its integration with the engine's world/entity system" ON)
option(SRE_EXAMPLES "Build example applications" ${EXAMPLE_OPTIONS})
option(SRE_TESTS "Build and run tests" ON)

set(SRE_CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(SRE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_MODULE_PATH ${SRE_CMAKE_MODULE_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib)

if (ANDROID)
    set(BUILD_SHARED_LIBS ON)
else()
    set(BUILD_SHARED_LIBS OFF)
endif()

if (UNIX)
    enable_language(ASM)
endif()

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(3rdparty)

include(CheckIncludeFile)
include(sre)
include(sre/targets)

add_subdirectory(src)

project(sre_private)
add_library(sre_private INTERFACE)
target_link_libraries(sre_private INTERFACE sre_werror)
target_compile_definitions(sre_private INTERFACE SRE=1)

project(sredll) # sre shared library?? :o (unimplemented...)
add_library(sredll SHARED src/dllmain.c)
target_link_libraries(sredll PUBLIC ${SRE_MODULES})

if(MSVC)
    target_link_options(sre_noconsole INTERFACE "/SUBSYSTEM:WINDOWS")
    target_compile_options(sre_werror INTERFACE "/WX")
    target_compile_definitions(sre_werror INTERFACE _CRT_SECURE_NO_WARNINGS)
else()
    if (WIN32)
        target_link_options(sre_noconsole INTERFACE "-mwindows")
    endif()
    target_compile_options(sre_werror INTERFACE "-Werror")
    target_link_options(sre INTERFACE "-Wl,--start-group") # Incremental linking, this is needed for non-MSVC compilers
endif()
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(sre_werror INTERFACE "-Wno-vla-extension" "-Wno-deprecated-declarations")
endif()

if (ANDROID)
    # Support for 16kb aligned memory pages (Support for disabling the option might come)
    target_link_options(sre INTERFACE "-Wl,-z,max-page-size=16384")
    target_link_libraries(sre INTERFACE android log)
else()
    check_include_file(ucontext.h HAVE_UCONTEXT_H)
endif()

check_include_file(sys/stat.h HAVE_SYSSTAT_H)
if (HAVE_UCONTEXT_H)
    target_compile_definitions(sre INTERFACE "HAVE_UCONTEXT_H")
endif()
if (HAVE_SYSSTAT_H)
    target_compile_definitions(sre INTERFACE "HAVE_SYSSTAT_H")
endif()

if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
    set(EXAMPLE_OPTIONS ON)
else()
    set(EXAMPLE_OPTIONS OFF)

    set(SRE_DIR ${SRE_DIR} PARENT_SCOPE)
    set(CMAKE_ASM_COMPILE_OBJECT "${CMAKE_ASM_COMPILE_OBJECT}" PARENT_SCOPE)
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${SRE_CMAKE_MODULE_PATH} PARENT_SCOPE)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} PARENT_SCOPE)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} PARENT_SCOPE)
endif()

if (WANT_EXAMPLES)
    add_subdirectory(examples)
endif()

if (BUILD_TESTING)
    enable_testing()
    add_subdirectory(tests)
endif()

install(TARGETS ${SRE_MODULES})
install(FILES cmake/sre-config.cmake DESTINATION .)
install(DIRECTORY include DESTINATION share/sre)
install(DIRECTORY common DESTINATION share/sre)
install(DIRECTORY scripts DESTINATION share/sre PATTERN __pycache__ EXCLUDE)
install(DIRECTORY cmake DESTINATION share/sre)
install(DIRECTORY gen_src DESTINATION share/sre)