project(sre_driverinterface)
add_library(sre_driverinterface INTERFACE)

add_subdirectory(sdl_renderer)
add_subdirectory(opengl)

target_link_libraries(sre_driverinterface INTERFACE sre)
target_link_libraries(sre_driverinterface INTERFACE sre_interface)
target_include_directories(sre_driverinterface INTERFACE ".")

target_link_libraries(sre_driverinterface INTERFACE sre_sdlrenderer)